objects/AppointmentInvitee.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collage_Address__c</fullName>
        <label>Collage Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collage_phone_number__c</fullName>
        <label>Collage phone number</label>
        <type>Phone</type>
    </fields>
</CustomObject>